Fixed dark mode in scroll bars (contao/contao-manager#833)

--- a/src/assets/styles/_defaults.scss
+++ b/src/assets/styles/_defaults.scss
@@ -75,6 +75,7 @@ $font-weight-bold: 600;
 
 // Dark-mode
 html[data-color-scheme=dark] {
+    color-scheme: dark;
   --text: #ddd;
   --link: #f47c00;
   --body-bg: #0f0f11;
